--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization = true
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 
-spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
